docs: add new endpoints for twin component and instance
